增加appconfig ip地址配置

--- a/ExcelApp/App.config
+++ b/ExcelApp/App.config
@@ -15,6 +15,7 @@
     <add key="Catalog" value="FormBulider" />
     <add key="UserId" value="sa" />
     <add key="Password" value="123456a?" />
+    <add key="Host" value="localhost" />
   </appSettings>
   <system.data>
     <DbProviderFactories>
