修改关联弹窗问题

--- a/ExcelApp/App.config
+++ b/ExcelApp/App.config
@@ -15,7 +15,7 @@
     <add key="Catalog" value="FormBulider" />
     <add key="UserId" value="sa" />
     <add key="Password" value="123456a?" />
-    <add key="Host" value="localhost" />
+    <add key="Host" value="10.8.2.107:9001" />
   </appSettings>
   <system.data>
     <DbProviderFactories>
