--- a/ExcelApp/App.config
+++ b/ExcelApp/App.config
@@ -16,8 +16,8 @@
     <add key="UserId" value="sa" />
     <add key="Password" value="123456a?" />
     <!--<add key="Host" value="localhost" />-->
-
     <add key="Host" value="10.8.2.107:9001" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.data>
     <DbProviderFactories>
@@ -41,4 +41,16 @@
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
