增加记住密码 ，合计，日期，批量删除等问题

--- a/ExcelApp/App.config
+++ b/ExcelApp/App.config
@@ -17,6 +17,8 @@
     <add key="Password" value="123456a?" />
     <!--<add key="Host" value="localhost" />-->
     <add key="Host" value="10.8.2.107:9001" />
+    <add key="LoginUser" value="9999" />
+    <add key="LoginPassWord" value="aaaaaa" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.data>
