--- a/ExcelApp/App.config
+++ b/ExcelApp/App.config
@@ -16,8 +16,8 @@
     <add key="UserId" value="sa" />
     <add key="Password" value="123456a?" />
     <!--<add key="Host" value="localhost" />-->
-    <add key="Host" value="10.8.2.107:9001" />
-    <add key="LoginUser" value="9999" />
+    <add key="Host" value="http://10.8.2.107:9001" />
+    <add key="LoginUser" value="8888" />
     <add key="LoginPassWord" value="aaaaaa" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
