--- a/ExcelClient/packages.config
+++ b/ExcelClient/packages.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.60.6" targetFramework="net451" />
+  <package id="NetDimension.NanUI" version="0.6.3239.1" targetFramework="net45" />
+  <package id="NetDimension.NanUI.Cef3239" version="3.3239.1723.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
+  <package id="NPoco" version="3.8.0" targetFramework="net45" />
+  <package id="NPOI" version="2.4.1" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="19.3.0" targetFramework="net451" />
   <package id="RestSharp" version="104.5.0" targetFramework="net45" />
+  <package id="SharpZipLib" version="1.0.0" targetFramework="net45" />
 </packages>
