--- a/ExcelClient/ExcelClient.csproj
+++ b/ExcelClient/ExcelClient.csproj
@@ -98,11 +98,11 @@
   <ItemGroup>
     <Compile Include="Dappper\OracleDynamicParameters.cs" />
     <Compile Include="DB\DataBaseManager.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormDW.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormDW.Designer.cs">
+      <DependentUpon>FormDW.cs</DependentUpon>
     </Compile>
     <Compile Include="FormCef.cs">
       <SubType>Form</SubType>
@@ -142,8 +142,9 @@
     <Compile Include="Model\GSPUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="UserInfo.cs" />
+    <EmbeddedResource Include="FormDW.resx">
+      <DependentUpon>FormDW.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCef.resx">
       <DependentUpon>FormCef.cs</DependentUpon>
@@ -157,7 +158,7 @@
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
+    <None Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
