--- a/ExcelClient/App.config
+++ b/ExcelClient/App.config
@@ -2,6 +2,9 @@
 <configuration>
   <configSections>
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ExcelClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
@@ -39,4 +42,11 @@
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
+  <applicationSettings>
+    <ExcelClient.Properties.Settings>
+      <setting name="ExcelClient_WsGetDataClient_WSGetData" serializeAs="String">
+        <value>http://localhost:1402/WSGetData.asmx</value>
+      </setting>
+    </ExcelClient.Properties.Settings>
+  </applicationSettings>
 </configuration>
