--- a/ExcelClient/ExcelClient.csproj
+++ b/ExcelClient/ExcelClient.csproj
@@ -38,11 +38,16 @@
       <HintPath>..\packages\Dapper.1.60.6\lib\net451\Dapper.dll</HintPath>
     </Reference>
     <Reference Include="DevExpress.BonusSkins.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Charts.v14.1.Core, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Office.v14.1.Core, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.PivotGrid.v14.1.Core, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v14.1.Core, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraBars.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v14.1.Extensions, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v14.1.UI, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v14.1, Version=14.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -83,8 +88,10 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -96,8 +103,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BASE64.cs" />
+    <Compile Include="CommFun\BBGsHelp.cs" />
+    <Compile Include="CommFun\ComputeHash.cs" />
+    <Compile Include="CommFun\DesEncrypt.cs" />
+    <Compile Include="CommFun\DevBBTitleFont.cs" />
+    <Compile Include="CommFun\DevPrint.cs" />
+    <Compile Include="CommFun\DevQryPubFun.cs" />
+    <Compile Include="CommFun\JsonConvert.cs" />
+    <Compile Include="CommFun\LocalDataOper.cs" />
+    <Compile Include="CommFun\ReflectClass.cs" />
+    <Compile Include="CommFun\ReflectForm.cs" />
+    <Compile Include="CommFun\StrCase.cs" />
+    <Compile Include="CommFun\StringToDataSet.cs" />
+    <Compile Include="CommFun\WebSvrGetData.cs" />
+    <Compile Include="CommFun\WebSvrThreadGetData.cs" />
     <Compile Include="Dappper\OracleDynamicParameters.cs" />
     <Compile Include="DB\DataBaseManager.cs" />
+    <Compile Include="DefCom\JTPUBQRDEFEty.cs" />
+    <Compile Include="DefCom\JTPUBQRDEFMgr.cs" />
+    <Compile Include="DefCom\LSTIGSDEVQRYMgr.cs" />
     <Compile Include="FormDW.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +140,30 @@
     </Compile>
     <Compile Include="FormConsole.Designer.cs">
       <DependentUpon>FormConsole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDevBBShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDevBBShow.Designer.cs">
+      <DependentUpon>frmDevBBShow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDevChartShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDevChartShow.Designer.cs">
+      <DependentUpon>frmDevChartShow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDevPivotShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDevPivotShow.Designer.cs">
+      <DependentUpon>frmDevPivotShow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDevQryShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDevQryShow.Designer.cs">
+      <DependentUpon>frmDevQryShow.cs</DependentUpon>
     </Compile>
     <Compile Include="JSBridge\ExportModel.cs" />
     <Compile Include="JSBridge\JSLoginObject.cs" />
@@ -143,6 +192,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
+    <Compile Include="Web References\WsGetDataClient\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormDW.resx">
       <DependentUpon>FormDW.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +205,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormConsole.resx">
       <DependentUpon>FormConsole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDevBBShow.resx">
+      <DependentUpon>frmDevBBShow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDevChartShow.resx">
+      <DependentUpon>frmDevChartShow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDevPivotShow.resx">
+      <DependentUpon>frmDevPivotShow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDevQryShow.resx">
+      <DependentUpon>frmDevQryShow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -179,12 +245,37 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Web References\WsGetDataClient\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\WsGetDataClient\WSGetData.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\NanUI.png" />
+    <None Include="Web References\WsGetDataClient\WSGetData.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://localhost:1402/WSGetData.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\WsGetDataClient\</RelPath>
+      <UpdateFromURL>http://localhost:1402/WSGetData.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>ExcelClient_WsGetDataClient_WSGetData</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NetDimension.NanUI.Cef3239.3.3239.1723.0\build\NetDimension.NanUI.Cef3239.targets" Condition="Exists('..\packages\NetDimension.NanUI.Cef3239.3.3239.1723.0\build\NetDimension.NanUI.Cef3239.targets')" />
