--- a/ExcelAPPWeb/Web.config
+++ b/ExcelAPPWeb/Web.config
@@ -24,6 +24,7 @@
     <add name="DataPlatformDB"
       connectionString="Data Source=LIWL01\SQLEXPRESS;Initial Catalog=FormBulider;Persist Security Info=True;User ID=sa;Password=123456a?"
       providerName="System.Data.SqlClient"/>
+    <add name="GSY" connectionString="Data Source=LIWL01\SQLEXPRESS;Initial Catalog=FormBulider;Persist Security Info=True;User ID=sa;Password=123456a?" providerName="MSS"/>
 
     <!--<add name="DataPlatformDB" connectionString="Data Source=10.8.2.11/wyqcdb;User ID=lc1019999;Password=tjlc8888;" providerName="Oracle.ManagedDataAccess.Client"/>-->
 
