--- a/ExcelClient/ExcelClient.csproj
+++ b/ExcelClient/ExcelClient.csproj
@@ -194,6 +194,9 @@
     <Compile Include="frmDevQryShow.Designer.cs">
       <DependentUpon>frmDevQryShow.cs</DependentUpon>
     </Compile>
+    <Compile Include="HotLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="JSBridge\ExportModel.cs" />
     <Compile Include="JSBridge\JSDEVObject.cs" />
     <Compile Include="JSBridge\JSLoginObject.cs" />
@@ -222,6 +225,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestService\DWService.cs" />
+    <Compile Include="ucBanner.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucBanner.designer.cs">
+      <DependentUpon>ucBanner.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInfo.cs" />
     <Compile Include="Web References\WsGetDataClient\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -266,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucBanner.resx">
+      <DependentUpon>ucBanner.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
